--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
