--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.4",
+    "input-otp": "^1.2.4",
     "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
